---
source: crates/mokoto/tests/types.rs
expression: output
---
actor { x : Text }

---
Root@0..18
  ObjT@0..18
    ObjSort@0..6
      ActorKw@0..5 "actor"
      Space@5..6 " "
    LBrace@6..7 "{"
    Space@7..8 " "
    TypField@8..17
      Ident@8..9 "x"
      Space@9..10 " "
      Colon@10..11 ":"
      Space@11..12 " "
      PathT@12..17
        Path@12..17
          Ident@12..16 "Text"
          Space@16..17 " "
    RBrace@17..18 "}"
